--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
     - uses: actions/setup-go@v3
       with:
-        go-version: 1.17.x
+        go-version: 1.19
     - uses: actions/checkout@v3
     - uses: actions/cache@v3
       with:
@@ -24,4 +24,3 @@ jobs:
           ${{ runner.os }}-go-${{ matrix.go-version }}-
     - run: |
         go test ./...
-        go mod tidy
