--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,11 +2,8 @@ on: [pull_request]
 name: Go Test
 jobs:
   go-test:
-      runs-on: ${{ matrix.os }}
-
-      strategy:
-          matrix:
-              os: [macos-latest, windows-latest]
+    runs-on: windows-latest
+    steps:
     - uses: actions/setup-go@v3
       with:
         go-version: 1.19
