--- a/.github/workflows/authenticate.yml
+++ b/.github/workflows/authenticate.yml
@@ -1,11 +1,11 @@
-on: [push, pull_request]
+on: [pull_request]
 name: Authenticate Recipes
 jobs:
   authenticate-recipes:
     strategy:
       matrix:
-        go-version: [1.17.x]
-        os: [ubuntu-latest, macos-latest]
+        go-version: [1.19.x]
+        os: [windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/setup-go@v3
