--- a/.github/workflows/pkg-cov.yml
+++ b/.github/workflows/pkg-cov.yml
@@ -1,7 +1,7 @@
 on: [pull_request]
-name: Package Coverage
+name: Tests And Coverage
 jobs:
-  pkg-coverage:
+  test-and-coverage:
     strategy:
       matrix:
         go-version: [1.19.x]
