--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,7 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+# Shopping List Items
 *.workflow
 *.DS_Store
+*.xlsx
