--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
           version: v1.29
-          args: --timeout=5m
+          args: --timeout=5m --issues-exit-code=0
 
           # Optional: working directory, useful for monorepos
           # working-directory: somedir
