--- a/.github/workflows/revive.yml
+++ b/.github/workflows/revive.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run Revive Action
-      uses: morphy2k/revive-action@v2 -config all.toml
+      uses: "morphy2k/revive-action@v2" -config all.toml
 
 
 # # Options for analysis running.
