--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -29,7 +29,8 @@ jobs:
         with:
           # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
           version: v1.29
-          args: --timeout=5m 
+          args: --timeout=5m  
+          golangci_lint_flags: --config=.golangci.yml
 
           # Optional: working directory, useful for monorepos
           # working-directory: somedir
