--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,41 +1,31 @@
-name: golangci-lint
+name: Lint
 on:
-  push:
-    tags:
-      - v*
-    branches:
-      - master
-      - main
   pull_request:
-permissions:
-  contents: read
-  # Optional: allow read access to pull request. Use with `only-new-issues` option.
-  # pull-requests: read
+  push:
+    paths:
+      - '**.go'
+      - 'revive.toml'
+      - '.github/workflows/lint.yaml'
+
 jobs:
-  golangci:
-    strategy:
-      matrix:
-        go: [1.17]
-        os: [macos-latest, windows-latest]
-    name: lint
-    runs-on: ${{ matrix.os }}
+
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v3
-        with:
-          go-version: ${{ matrix.go }}
-      - uses: actions/checkout@v3
-      - name: Lint
-        uses: golangci/golangci-lint-action@v3
-        with:
-          # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
-          version: v1.29
-          args: --timeout=5m --config=.golangci.yml
 
-          # Optional: working directory, useful for monorepos
-          # working-directory: somedir
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: '1.19'
 
-          # Optional: golangci-lint command line arguments.
-          # args: --issues-exit-code=0
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v3
 
-          # Optional: show only new issues if it's a pull request. The default value is `false`.
-          # only-new-issues: true
+    - name: Run Revive Action
+      uses: docker://morphy/revive-action:v2
+      with:
+        config: revive.toml
+
+    - name: Check formatting
+      run: test -z $(gofmt -l .) || (gofmt -l . && exit 1)
