--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -13,6 +13,13 @@ permissions:
   # pull-requests: read
 jobs:
   show-linters:
+  strategy:
+      matrix:
+        go: [1.17]
+        os: [macos-latest, windows-latest]
+    name: lint
+    runs-on: ${{ matrix.os }}
+    steps:
       - name: Show linters
         uses: actions/setup-go@v3
         run: golangci-lint linters
