--- a/.github/workflows/authenticate.yml
+++ b/.github/workflows/authenticate.yml
@@ -1,4 +1,11 @@
-on: [pull_request]
+on:
+  push:
+    tags:
+      - v*
+    branches:
+      - master
+      - main
+  pull_request:
 name: Authenticate Recipes
 jobs:
   authenticate-recipes:
