--- a/.github/workflows/revive.yml
+++ b/.github/workflows/revive.yml
@@ -1,11 +1,19 @@
 name: Lint Revive
 on:
-  pull_request:
   push:
-    paths:
-      - '**.go'
-      - 'revive.toml'
-      - '.github/workflows/lint.yaml'
+    tags:
+      - v*
+    branches:
+      - master
+      - main
+  pull_request:
+# on:
+#   pull_request:
+#   push:
+#     paths:
+#       - '**.go'
+#       - 'revive.toml'
+#       - '.github/workflows/lint.yaml'
 
 jobs:
   lint-revive:
