--- a/.github/workflows/revive.yml
+++ b/.github/workflows/revive.yml
@@ -27,6 +27,10 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Run Revive Action
+      id: revive-output
       uses: docker://morphy/revive-action:v2
       with:
         config: revive.toml
+    
+    - name: Print output
+      - run: echo steps.run_tests.outputs
